# Astrid_sophia

./: .gitignore  AGENTS.md  ARGON_PRECISION.json  ARGON_PRECISION.md  CHANGELOG.md  CONTRIBUTING.md  DIAGNOSTICO_ENTORNO.md  PROGRESS.md  QUICKSTART.md  README.md  build.bat  build.sh  fix_solver.py  index.html  issues_report.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  wdio.conf.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.wdio.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ad_value.rs  advanced_ipc.rs  dual3.rs  gpu_solver.rs  krylov.rs  lib.rs  main.rs  parser.rs  solver.rs  sparse_csc.rs  sparse_parallel.rs  symbolic.rs  telemetry.rs  topology.rs
src-tauri/src/parser/: devices.rs  expressions.rs  lexer.rs  mod.rs  subcircuits.rs  tests.rs
src-tauri/src/parser/devices/: families.rs  models.rs
src-tauri/src/solver/: engine.rs  matrix.rs  mod.rs  types.rs
src-tauri/src/solver/engine/: ac.rs  advanced.rs  dc.rs  devices.rs  live_mutations.rs  mod.rs  simulation_types.rs  tests.rs  transient.rs  transient_companions.rs  transient_mcu.rs  transient_mixed_signal.rs  transient_setup.rs  transient_sources.rs  transient_state_updates.rs  transient_step_control.rs  transient_switches.rs  transient_thermal.rs
src-tauri/src/solver/engine/ac/: dc_sweep.rs  noise.rs  sweep.rs
src-tauri/src/solver/engine/advanced/: measurements.rs  monte_carlo.rs  periodic.rs  sensitivity.rs  spectral.rs  thermal.rs  transmission.rs
src-tauri/src/solver/engine/dc/: diagnostics.rs  homotopy.rs  linear.rs  newton.rs  result.rs
(+320 files in other folders)
