[package]
name = "astryd-sophia"
version = "0.1.0"
description = "Simulador de circuitos electronicos de escritorio"
authors = ["Astryd Sophia Project"]
edition = "2021"
default-run = "astryd-sophia"

[features]
wdio = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "astryd_sophia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-wdio = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.33"
num-complex = { version = "0.4", features = ["serde"] }
rfd = "0.14"
rayon = "1.10"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
